--- a/V27/latex-template/content/diskussion.tex
+++ b/V27/latex-template/content/diskussion.tex
@@ -1,2 +1,36 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+
+Der experimentell ermittelte Wert für den Lande-Faktor der roten Cadmium-Linie liegt bei 
+
+\begin{equation*}
+    g_\text{rot} = \num{1.04+-0.18}.
+\end{equation*}
+
+Der Theoriewert für linearpolarsiertes Licht der roten Cadmium Linie liegt bei $g_\text{theo, rot} = 1$. Damit ergibt 
+sich eine Abweichung von $\SI{4}{\percent}$.  
+
+Der experimentell ermittelte Wert für den Lande-Faktor für zirkular polarisiertes Licht der blauen Cadmium-Linie liegt bei 
+
+\begin{equation*}
+    g_\text{blau, \sigma} = \num{1.85+-0.18}.
+\end{equation*}
+
+Der Theoriewert für zirkularpolarsiertes Licht der blauen Cadmium Linie liegt bei $g_\text{theo, blau, \sigma} = 1.75$. Damit ergibt 
+sich eine Abweichung von $\SI{5.7}{\percent}$.
+
+Der experimentell ermittelte Wert für den Lande-Faktor für linear polarisiertes Licht der blauen Cadmium-Linie liegt bei 
+
+\begin{equation*}
+    g_\text{blau, \pi} = \num{0.91+-0.08}
+\end{equation*}
+
+Der Theoriewert für linearpolarsiertes Licht der blauen Cadmium Linie liegt bei $g_\text{theo, blau, \sigma} = 0.5$. Damit ergibt 
+sich eine Abweichung von $\SI{82}{\percent}$.
+
+Die beiden ersten Versuchsteile haben dabei sehr gut funktioniert, da die Abweichungen sehr klein sind. Bei der Bestimmung des 
+Lande-Faktors des linearpolarsierten Lichtes der blauen Cadmium-Linie trat eine deutlich größere Abweichung auf. Dafür kommt als 
+Fehlerquelle das Magnetfeld in Betracht. Dieses konnte insbesondere bei der linearpolarsierten blauen Linie nicht 
+hoch genug eingestellt werden. Somit ist keine optimale Trennung der Linien vorhanden. Außerdem sind weitere Fehlerquellen in
+unzureichender Justierung zu verorten. 
+
